feat: Add list archiving backend support
